# LFAS-protocol-v4

./: .coverage  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  ANALYSIS-IMPLEMENTATION-OPTIONS.md  ANNOUNCEMENT_BRIEF.md  ANNOUNCEMENT_DECISION.md  API.md  BLUEPRINT_AND_PRESS_GUIDE.md  CHALLENGE_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW_FIXES.md  CODING-QUICK-START.md  COMMERCIAL_LICENSING.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  FAQ.md  FINAL_SUMMARY.txt  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ANNOUNCEMENT.md  IMPROVEMENTS.md  LICENSE  MANIFEST.in  Makefile  PROJECT_STATUS.md  PROJECT_STATUS_REPORT.md  PYTHON_LIBRARY.md  PYTHON_README.md  README.md  README.md.backup  READY_TO_ANNOUNCE.md  SECURITY.md  STRENGTHENING_SUMMARY.md  TEST_PILLAR_MAPPING.md  TEST_SUMMARY.md  VULNERABILITY_TEST_SUMMARY.md  demonstrate_vulnerability_tests.py  (+5 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: Documentation Disclaimer Check  ci.yml  documentation-check.yml  license-check.yml  python-ci.yml
assets/: DIAGRAMS.md
demonstrations/: lfas-basic-demo.md
documentation/: delegation-guidelines.md  integration-examples.md  public-release-checklist.md  reality-gap-analysis.md  test-scenarios.md  testing-guide.md  white-paper-outline.md
examples/: README.md  basic_detection.py  basic_usage.py  chatbot_integration.py  conversation_history.py  crisis_detection.py  crisis_types.py  custom_specification.py  interactive_chat.py  openai_integration.py
integrations/: ARCHITECTURE.md  INTEGRATION_GUIDE.md  QUICKSTART.md  README.md
integrations/anthropic/: __init__.py  client.py  middleware.py
integrations/core/: __init__.py  detector.py  middleware.py  protection.py  safeguards.py
integrations/examples/: multi_platform_demo.py  simple_chatbot.py
integrations/google/: __init__.py  client.py  middleware.py
integrations/javascript/anthropic/: example-usage.js  lfas-anthropic.js  package.json
integrations/javascript/openai/: example-usage.js  lfas-openai.js  package.json
integrations/javascript/shared/: lfas-engine.js
integrations/openai/: __init__.py  client.py  middleware.py
integrations/python/anthropic/: __init__.py  example_usage.py  lfas_anthropic.py  requirements.txt
integrations/python/openai/: __init__.py  example_usage.py  lfas_openai.py  requirements.txt
integrations/python/shared/: __init__.py  lfas_engine.py  test_lfas.py
integrations/tests/: test_core.py  test_middleware.py
lfas/: README.md  __init__.py  crisis.py  detector.py  models.py  spec_loader.py  specification_loader.py
lfas_protocol/: __init__.py  detector.py  models.py  safeguards.py
lfas_protocol.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
protocol/: lfas-v4-complete-specification.xml  lfas-v4-specification.xml  lfas-v4-specifications.xml
research/: claude-validation.md  complete-research-compilation.md  nhs-health-funding-opportunities.md  placeholder.md  research-evidence-summary.md
research/protocol/: placeholder.md
src/lfas/: __init__.py  crisis.py  detector.py  py.typed  spec_loader.py
src/lfas_protocol/: __init__.py  detector.py  parser.py  safeguards.py
src/lfas_protocol.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: README.md  README_TESTS.md  __init__.py  conftest.py  requirements.txt  test_challenging_scenarios.py  test_crisis.py  test_detector.py  test_integration.py  test_models.py  test_safeguards.py  test_scenarios.py  test_spec_loader.py  test_specification_loader.py  test_stress_and_performance.py  test_utils.py  test_verification_requirements.py  test_vulnerability_detection.py
