[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lfas-protocol"
version = "4.0.0"
description = "LFAS Protocol v4 - Logical Framework for AI Safety"
readme = "README.md"
license = {text = "LFAS Protocol v4 License"}
license-files = ["LICENSE"]
authors = [
    {name = "Mehmet", email = "lfasprotocol@outlook.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["ai-safety", "vulnerability-detection", "crisis-response", "lfas"]

[project.urls]
Homepage = "https://github.com/LFASProtocol/LFAS-protocol-v4"
Repository = "https://github.com/LFASProtocol/LFAS-protocol-v4"
Documentation = "https://github.com/LFASProtocol/LFAS-protocol-v4/blob/main/PYTHON_LIBRARY.md"
Issues = "https://github.com/LFASProtocol/LFAS-protocol-v4/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lfas_protocol*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
