[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lfas-protocol"
version = "4.0.0"
description = "Logical Framework for AI Safety - Protecting Vulnerable Users"
authors = [
    {name = "Mehmet Bagbozan", email = "lfasprotocol@outlook.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/LFASProtocol/LFAS-protocol-v4"
